Create base files and Remove HelloWorld
Create menu file and student file
  - Menu displays the links that will take you to the files
    that display the data in the database
  - Students file displays all students in the database
  - The files are currently unfinished skeleton files
Remove index file
  - Index contained the HelloWorld code

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/Users/Work/Development/adt-bundle-mac-x86_64-20140702/sdk/extras/android/support/v7/appcompat/libs/postgresql-9.3-1102.jdbc4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
